# ado-aw

./: .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  IR_DONE.md  IR_PLAN.md  README.md  ado-script-design.md  es-metadata.yml  list_projects.py  mcp-metadata.json  release-please-config.json  rotate-agentplayground-secrets.ps1  s360-breeze-mcp.md
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md  pull_request_template.md
ado-aw-derive/: Cargo.toml
docs/: ado-aw-debug.md  ado-script.md  agency-plugin.md  audit.md  cli.md  codemods.md  conclusion.md  engine.md  engines.md  execution-context.md  extending.md  filter-ir.md  front-matter.md  imports.md  ir.md  local-development.md  mcp-author.md  mcp.md  mcpg.md  migrations.md  network.md  parameters.md  runtime-imports.md  runtimes.md  safe-output-permissions.md  safe-outputs.md  schedule-syntax.md  self-optimization.md  supply-chain.md  targets.md  template-markers.md  tools.md
docs-site/: astro.config.mjs  package-lock.json  package.json
examples/: azure-devops-mcp.md  daily-clippy-cyclomatic-complexity.md  daily-clippy-cyclomatic-complexity.yml  dogfood-failure-reporter.md  lean-verifier.md  safe-outputs-smoke-test.lock.yml  safe-outputs-smoke-test.md  sample-agent.md
prompts/: audit-ado-agentic-workflow.md  create-ado-agentic-workflow.md  debug-ado-agentic-workflow.md  update-ado-agentic-workflow.md
scripts/: gate-eval.py  gate-spec.schema.json  rotate-agentplayground-secrets.ps1
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
src/: agent_stats.rs  allowed_hosts.rs  configure.rs  create.rs  detect.rs  disable.rs  ecosystem_domains.rs  enable.rs  engine.rs  execute.rs  hash.rs  (+19 more)
(+799 files in other folders)
