[package]
name = "ado-aw"
version = "0.6.0"
edition = "2024"

[dependencies]
clap = { features = ["derive", "env"], version = "4.5.40" }
anyhow = "1.0.100"
async-trait = "0.1"
chrono = "0.4"
dirs = "6"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
schemars = "1.2"
rmcp = { version = "0.8.0", features = ["server", "transport-io"] }
percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1.43", features = ["full"] }
log = "0.4"
env_logger = "0.11"
regex-lite = "0.1"
inquire = { version = "0.9.2", features = ["editor"] }
terminal_size = "0.4.3"
url = "2.5.8"
