[package]
name = "ado-aw"
version = "0.20.0"
edition = "2024"

[dependencies]
ado-aw-derive = { path = "ado-aw-derive" }
clap = { features = ["derive", "env"], version = "4.5.40" }
anyhow = "1.0.100"
async-trait = "0.1"
chrono = "0.4"
dirs = "6"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
schemars = "1.2"
rmcp = { version = "0.8.0", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1.43", features = ["full"] }
log = "0.4"
env_logger = "0.11"
regex-lite = "0.1"
inquire = "0.9.2"  # Used by configure command (Password prompts)
url = "2.5.8"
axum = { version = "0.8.8", features = ["tokio"] }
subtle = "2.6.1"
rand = "0.10.1"
base64 = "0.22.1"
glob-match = "0.2.1"
similar = "3.1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
